[tool.poetry]
name = "test-cursor"
version = "0.1.0"
description = ""
authors = ["Hiep Dinh <hoanghiepitvnn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
cython = "^3.0.11"
setuptools = "^75.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
